--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,6 @@ node_js:
     - "4"
     - "5"
 sudo: false
-script: "npm test && npm run check-commit && npm run docs"
+script: "npm test && npm run docs"
 after_success:
     - npm run coveralls
-addons:
-    code_climate:
-        repo_token: 1945f7420d920a59f1ff8bf8d1a7b60ccd9e2838a692f73a5a74accd8df30146
